# project-dashboard

./: .gitignore  Cargo.toml  README.md
src/: files.rs  macro.rs  main.rs  structs.rs  tui.rs
src/commands/: tasks.rs
src/tui/: tasks.rs  tui.rs
