[package]
name = "project-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
futures = "0.3.31"
bitflags = "2.9.1"
tabled = "0.20.0"
toml_edit = "0.23.1"
shell-words = "1.1.0"

