[package]
name = "project-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["all-widgets",  "serde"] }
toml = "0.9.2"
bitflags = "2.9.1"
shell-words = "1.1.0"
color-eyre = "0.6.5"
